--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,14 +10,14 @@ jobs:
   build:
     strategy:
       matrix:
-        node: [16, 18, 20, 21, 22, 23]
+        node: [16, 18, 20, 21, 22, 23, 24]
         os: [ubuntu-22.04]
         include:
           # single mac test due to minute multipliers
           # https://docs.github.com/en/billing/managing-billing-for-github-actions/about-billing-for-github-actions
-          - node: 22
+          - node: 24
             os: macos-14
-          - node: 22
+          - node: 24
             os: windows-2022
     runs-on: ${{ matrix.os }}
     steps:
